replaced ::active with.active in progress bar .bullet

--- a/forms/form.scss
+++ b/forms/form.scss
@@ -295,7 +295,7 @@
                         background: #262626;
                     }
 
-                    &:active {
+                    &.active {
                         &::after {
                             background: #dc143c;
                                 transform: scaleX(0);
