--- a/css/form.css
+++ b/css/form.css
@@ -208,7 +208,7 @@
             height: 3px;
             width: 25px;
             background: #262626; }
-          .welcome-section .form-container .form-progress-bar .step .bullet:active::after {
+          .welcome-section .form-container .form-progress-bar .step .bullet.active::after {
             background: #dc143c;
             transform: scaleX(0);
             transform-origin: left;
