inputs and textarea invalid style test.. and Tab Indicies

--- a/css/form.css
+++ b/css/form.css
@@ -88,8 +88,9 @@
               font-family: 'Poppins', sans-serif;
               height: 100%;
               width: 100%;
-              border: 1px solid lightgrey;
+              border: none;
               outline: none;
+              box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298;
               border-radius: 5px;
               padding-left: 15px;
               font-size: 18px;
@@ -97,20 +98,30 @@
               .welcome-section .form-container .form-outer form .page .field input::placeholder {
                 font-size: .7em; }
               .welcome-section .form-container .form-outer form .page .field input:invalid {
-                background: #ddd;
-                border: 1px solid #990707; }
+                background: #cf30501e; }
               .welcome-section .form-container .form-outer form .page .field input:focus {
                 border: none;
                 box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
             .welcome-section .form-container .form-outer form .page .field textarea {
               height: 100px;
-              width: 100%; }
+              width: 100%;
+              border-radius: 5px;
+              border: none;
+              outline: none;
+              box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
+              .welcome-section .form-container .form-outer form .page .field textarea:focus {
+                background: #f4f4f4; }
             .welcome-section .form-container .form-outer form .page .field select {
               width: 100%;
               padding-left: 10px;
               font-size: 17px;
               font-weight: 500;
-              border: 1px solid pink; }
+              border-radius: 5px;
+              border: none;
+              box-shadow: inset 2px 2px 4px #ddd, inset -2px -2px 4px #000a; }
+              .welcome-section .form-container .form-outer form .page .field select:focus:focus {
+                border: none;
+                box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
             .welcome-section .form-container .form-outer form .page .field button {
               width: 100%;
               height: calc(100% + 5px);
@@ -162,6 +173,8 @@
               color: #ddd; }
               .welcome-section .form-container .form-outer form .page .btns button.prev::before {
                 background: #a00c2a; }
+              .welcome-section .form-container .form-outer form .page .btns button.prev::after {
+                background: #161616; }
             .welcome-section .form-container .form-outer form .page .btns button.next {
               margin-left: 3px; }
     .welcome-section .form-container .form-progress-bar {
