form,html $ scss

--- a/forms/form.scss
+++ b/forms/form.scss
@@ -34,6 +34,10 @@
     // overflow: hidden;
     overflow: scroll;
 
+    &::after {
+        display: none;
+    }
+
 
 
     
@@ -49,6 +53,7 @@
         background: #fff;
         width: 330px;
         margin-top: 8vh;
+        height: auto;
         text-align: center;
         border-radius: 5px;
         padding: 50px 35px 10px 35px;
@@ -100,6 +105,15 @@
                         text-align: left;
                         font-size: 25px;
                         font-weight: 900;
+
+                        h3 {
+                            font-size: 1em;
+                        }
+
+                        p {
+                            padding: 0;
+                            font-weight: 600;
+                        }
                     }
 
                     .field { 
@@ -266,9 +280,10 @@
 
                 p {
                     font-weight: 800;
-                    font-size: 1.3em;
+                    font-size: 1em;
                     color: #000;
                     margin: .4em auto;
+                    text-transform: capitalize;
                     // margin-bottom: 8px;
                 }
 
