--- a/css/form.css
+++ b/css/form.css
@@ -25,6 +25,8 @@
   align-items: center;
   min-height: 100vh;
   overflow: scroll; }
+  .welcome-section::after {
+    display: none; }
   .welcome-section ::selection {
     color: green;
     background: pink; }
@@ -34,6 +36,7 @@
     background: #fff;
     width: 330px;
     margin-top: 8vh;
+    height: auto;
     text-align: center;
     border-radius: 5px;
     padding: 50px 35px 10px 35px;
@@ -71,6 +74,11 @@
             text-align: left;
             font-size: 25px;
             font-weight: 900; }
+            .welcome-section .form-container .form-outer form .page .title h3 {
+              font-size: 1em; }
+            .welcome-section .form-container .form-outer form .page .title p {
+              padding: 0;
+              font-weight: 600; }
           .welcome-section .form-container .form-outer form .page .field {
             width: 100%;
             height: 45px;
@@ -186,9 +194,10 @@
         margin: 1em auto; }
         .welcome-section .form-container .form-progress-bar .step p {
           font-weight: 800;
-          font-size: 1.3em;
+          font-size: 1em;
           color: #000;
-          margin: .4em auto; }
+          margin: .4em auto;
+          text-transform: capitalize; }
         .welcome-section .form-container .form-progress-bar .step .bullet {
           height: 25px;
           width: 25px;
