--- a/css/style.css
+++ b/css/style.css
@@ -517,7 +517,56 @@ span {
   z-index: -1;
   overflow: hidden;
 }
+.welcome-section #thanks {
+  border: none;
+  padding: 1em 2em;
+  font-size: 2em;
+  background-color: #29323c;
+  border-radius: 5px;
+  text-align: center;
+  margin: 0 auto;
+  box-shadow: inset 3px 3px 5px #ddda,
+              inset -3px -3px 5px #000a;
+}
+#thanks h3 {
+  color: #ddd;
+  margin: 1em auto;
+}
+#thanks i {
+  border: none;
+  outline: none;
+  margin: 1em auto;
+  padding: .5em 3em;
+  text-align: center;
+  color: #dddd;
+  position: relative;
+}
+#thanks i::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transition: .3s;
+  box-shadow: inset 3px 3px 5px #ddda,
+              inset -3px -3px 5px #000a;
+}
 
+#thanks i:active {
+  transition: .2s;
+  transform: scale(.9);
+}
+@media screen and (max-width:768px){
+  #thanks {
+    width: 80%;
+  }
+  #thanks h3 {
+    font-size: .9em;
+    padding: .1em;
+  }
+}
 #hero-h1 {
   background: transparent;
   backdrop-filter: blur(4px);
