--- a/css/form.css
+++ b/css/form.css
@@ -41,14 +41,26 @@
     border-radius: 5px;
     padding: 50px 35px 10px 35px;
     box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
+    @media (max-width: 500px) {
+      .welcome-section .form-container {
+        width: 85%;
+        margin-top: 15vh;
+        padding: 2em; } }
+    @media (max-width: 330px) {
+      .welcome-section .form-container {
+        height: 85vh; } }
     .welcome-section .form-container header {
       text-transform: capitalize;
       font-size: 2em;
       font-weight: 600;
-      margin: 0 0 30px 0;
-      padding: .2em;
+      margin: .4em auto;
+      padding: .4em;
       border-radius: 5px;
       box-shadow: inset 2px 2px 4px #ddd, inset -2px -2px 4px #000a; }
+      @media (max-width: 500px) {
+        .welcome-section .form-container header {
+          font-size: 1.7em;
+          padding: .3em; } }
     .welcome-section .form-container .form-outer {
       width: 100%;
       overflow: hidden; }
@@ -72,7 +84,7 @@
               left: 0; }
           .welcome-section .form-container .form-outer form .page .title {
             text-align: left;
-            font-size: 25px;
+            font-size: 1.9em;
             font-weight: 900; }
             .welcome-section .form-container .form-outer form .page .title h3 {
               font-size: 1em; }
@@ -123,9 +135,10 @@
               width: 100%;
               padding-left: 10px;
               font-size: 17px;
-              font-weight: 500;
+              font-weight: 600;
               border-radius: 5px;
               border: none;
+              color: #000;
               box-shadow: inset 2px 2px 4px #ddd, inset -2px -2px 4px #000a; }
               .welcome-section .form-container .form-outer form .page .field select:focus:focus {
                 border: none;
@@ -185,7 +198,7 @@
               margin-left: 3px; }
     .welcome-section .form-container .form-progress-bar {
       display: flex;
-      margin: 40px 0;
+      margin: 1em auto;
       user-select: none; }
       .welcome-section .form-container .form-progress-bar .step {
         text-align: center;
@@ -227,15 +240,15 @@
             position: absolute;
             content: '';
             bottom: 50%;
-            right: -35px;
+            right: -30px;
             height: 3px;
             width: 25px;
-            background: #262626; }
+            background: #2626261c; }
           .welcome-section .form-container .form-progress-bar .step .bullet.active::after {
             background: #dc143c;
             transform: scaleX(0);
             transform-origin: left;
-            animation: animate 0.3s linear forwards; }
+            animation: animate .6s linear forwards; }
 
 @keyframes animate {
   100% {
