--- a/css/form.css
+++ b/css/form.css
@@ -110,18 +110,25 @@
               width: 100%;
               border: none;
               outline: none;
-              box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298;
+              box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #000a;
               border-radius: 5px;
+              background-color: #f4f4f4;
               padding-left: 15px;
               font-size: 18px;
               transition: .2s; }
               .welcome-section .form-container .form-outer form .page .field input::placeholder {
                 font-size: .7em; }
               .welcome-section .form-container .form-outer form .page .field input:invalid {
-                background: #cf30501e; }
+                background: #cf30501e;
+                border: none;
+                outline: none;
+                box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #79092098; }
               .welcome-section .form-container .form-outer form .page .field input:focus {
                 border: none;
-                box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
+                outline: none;
+                box-shadow: none;
+                background-color: rgba(135, 207, 235, 0.233);
+                box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px rgba(28, 39, 100, 0.667); }
             .welcome-section .form-container .form-outer form .page .field textarea {
               height: 100px;
               width: 100%;
@@ -140,6 +147,8 @@
               border: none;
               color: #000;
               box-shadow: inset 2px 2px 4px #ddd, inset -2px -2px 4px #000a; }
+              .welcome-section .form-container .form-outer form .page .field select option {
+                font-weight: 600; }
               .welcome-section .form-container .form-outer form .page .field select:focus:focus {
                 border: none;
                 box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
@@ -191,9 +200,9 @@
             .welcome-section .form-container .form-outer form .page .btns button.prev {
               margin-right: 3px;
               font-size: 17px;
-              color: #ddd; }
+              color: #ddda; }
               .welcome-section .form-container .form-outer form .page .btns button.prev::before {
-                background: #a00c2a; }
+                background: #70081d; }
             .welcome-section .form-container .form-outer form .page .btns button.next {
               margin-left: 3px; }
     .welcome-section .form-container .form-progress-bar {
