--- a/forms/form.scss
+++ b/forms/form.scss
@@ -156,8 +156,9 @@
                             border: none;
                             outline: none;
                             box-shadow: inset 2px 2px 4px #ddda,
-                                            inset -2px -2px 4px #41061298;
+                                            inset -2px -2px 4px #000a;
                             border-radius: 5px;
+                            background-color: #f4f4f4;
                             padding-left: 15px;
                             font-size: 18px;
                             transition: .2s;
@@ -167,13 +168,19 @@
                             }
                             &:invalid {
                                 background: #cf30501e;
-                                // border: 3px solid rgb(153, 7, 7);
+                                border: none;
+                                outline: none;
+                                box-shadow: inset 2px 2px 4px #ddda,
+                                            inset -2px -2px 4px #79092098;
                             }
 
                             &:focus {
                                 border: none;
+                                outline: none;
+                                box-shadow: none;
+                                background-color: rgba(135, 207, 235, 0.233);
                                 box-shadow: inset 2px 2px 4px #ddda,
-                                            inset -2px -2px 4px #41061298;
+                                inset -2px -2px 4px rgba(28, 39, 100, 0.667);
                             }
                             
                         
@@ -200,6 +207,10 @@
                             color: #000;
                             box-shadow: inset 2px 2px 4px #ddd,
                                         inset -2px -2px 4px #000a;
+
+                            option {
+                                font-weight: 600;
+                            }
 
                             &:focus {
                                 &:focus {
@@ -270,9 +281,9 @@
                             &.prev {
                                 margin-right: 3px;
                                 font-size: 17px;
-                                color: #ddd;
+                                color: #ddda;
                                 &::before {
-                                    background: #a00c2a;
+                                    background: #70081d;
                                 }
                             }
                             &.next {
