--- a/forms/form.scss
+++ b/forms/form.scss
@@ -55,7 +55,7 @@
             padding: 2em;
         }
         @media (max-width: 330px){
-            height: 85vh;
+            height: 87vh;
         }
         border: none;
         outline: none;
@@ -120,8 +120,16 @@
                         text-align: left;
                         font-size: 1.9em;
                         font-weight: 900;
-
+                        
                         h3 {
+                            text-align: center;
+                            padding: .3em;
+                            border-radius: 5px;
+                            background: #333a;
+                            box-shadow: inset 2px 2px 5px #fffa,
+                                        inset -2px -2px 5px #000;
+                            color: #fff;
+                            letter-spacing: .1em;
                             font-size: 1em;
                         }
 
@@ -407,6 +415,24 @@
     }
 
 }
+.form-footer {
+    .map {
+        margin: 1em auto;
+        border: none;
+        outline: none;
+        width: 80%;
+        border-radius: 5px;
+        // padding: 1em;
+        height: 50vh;
+        overflow: hidden;
 
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        outline: none;
+        }
+    }
+}
 
 
