--- a/css/form.css
+++ b/css/form.css
@@ -90,7 +90,7 @@
               text-align: center;
               padding: .3em;
               border-radius: 5px;
-              background: #333a;
+              background: #485563;
               box-shadow: inset 2px 2px 5px #fffa, inset -2px -2px 5px #000;
               color: #fff;
               letter-spacing: .1em;
