--- a/css/form.css
+++ b/css/form.css
@@ -24,7 +24,8 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  overflow: scroll; }
+  overflow: hidden;
+  padding: 1em; }
   .welcome-section::after {
     display: none; }
   .welcome-section ::selection {
@@ -284,6 +285,9 @@
           .welcome-section .form-container .form-progress-bar .step .check.active {
             display: block;
             color: #fff; }
+
+.form-footer .footer {
+  padding-top: 0; }
 
 .form-footer .map {
   margin: 1em auto;
