--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ span {
 #header .hamburger {
   height: 60px;
   width: 60px;
-  margin: 5px 20px;
+  margin: 5px auto;
   display: inline-block;
   border-radius: 50%;
   position: relative;
