--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 html {
-  font-size: 10px;
+  /* font-size: 10px; */
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
 }
@@ -117,11 +117,10 @@ a {
 
 p {
   color: #000;
-  font-size: 1.3rem;
   margin-top: 5px;
-  line-height: 2.8rem;
+  line-height: 1.5;
   font-weight: 400;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.05em;
 }
 
 span {
@@ -129,15 +128,14 @@ span {
 }
 
 .section-title {
-  font-size: 4rem;
+  font-size: 2.7em;
   font-weight: 500;
   max-width: 100vw;
   color: #000;
   margin-bottom: 10px;
   text-transform: uppercase;
-  letter-spacing: 0.2rem;
+  letter-spacing: .1em;
   text-align: center;
-
 }
 
 /* TEXT-REFLECT CSS */
@@ -188,7 +186,7 @@ span {
   animation: section-span 3s ease-in-out infinite;
   height: 5px;
 }
-
+/* section title animations */
 @keyframes section-span {
 
   0%,
@@ -210,38 +208,21 @@ span {
     color: darkblue;
   }
 }
+/* end of section title animations */
+
 /* end of section titles */
 
-#aka span {
-  position: relative;
-  display: inline-block;
-  animation: aka 5s ease alternate;
-  animation-delay: 4s;
-  margin: 0 40px;
-  color: #fff;
-  opacity: 0.5;
-  transform: scale(0.7);
-}
-
-@keyframes aka {
-  50% {
-    opacity: 1;
-    transform: scale(1);
-    color: tomato;
-  }
-}
-
+/* navbar logo (my name) */
 .brand h1 {
-  font-size: 2.4rem;
+  font-size: 1.5em;
   text-transform: uppercase;
   color: #fff;
   font-family: 'Gruppo', cursive;
   text-shadow: 0 0 10px #dc143c;
 }
+/* navbar logo (my name) */
 
-
-
-/*Header Section*/
+/*Header / Navbar Section*/
 #header {
   position: fixed;
   z-index: 1000;
@@ -266,7 +247,7 @@ span {
   max-width: 1300px;
   padding: 0 10px;
 }
-
+/* nav list */
 #header .nav-list ul {
   list-style: none;
   position: absolute;
@@ -335,9 +316,9 @@ span {
   background-color: #29323c;
 }
 #header .nav-list ul li a {
-  font-size: 1.7rem;
+  font-size: 1.3em;
   font-weight: 500;
-  letter-spacing: 0.2rem;
+  letter-spacing: .15em;
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
@@ -357,7 +338,7 @@ span {
   box-shadow: inset 2px 2px 3px #ddda,
     inset -2px -2px 3px #000a;
 }
-
+/* sidebar background text */
 #header .nav-list ul a::after {
   content: attr(data-after);
   position: absolute;
@@ -365,7 +346,7 @@ span {
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   color: rgba(240, 248, 255, 0.021);
-  font-size: 12rem;
+  font-size: 3em;
   letter-spacing: 50px;
   z-index: -1;
   transition: 0.3s ease letter-spacing;
@@ -375,6 +356,9 @@ span {
   transform: translate(-50%, -50%) scale(1);
   letter-spacing: initial;
 }
+/* sidebar background text */
+
+/* end of nav list */
 
 /*Hamburger menu*/
 #header .hamburger {
@@ -518,7 +502,7 @@ span {
   z-index: -1;
   overflow: hidden;
 }
-/* hero content (h1 and button) */
+/* hero content container (h1 and button) */
 #hero-h1 {
   /* border: 1px solid red; */
   margin: 1em;
@@ -528,16 +512,16 @@ span {
   border-radius: 5px;
 }
 #hero-h1 h1 {
-  margin-bottom: .5em;
+  margin-bottom: .2em;
 }
 .welcome-section h1 {
   display: block;
   width: fit-content;
-  font-size: 3.5em;
+  font-size: 2.1em;
   color: #eee;
   font-family: 'Philosopher', sans-serif;
 }
-
+/* hero h1 */
 .hero h1 span {
   display: inline-block;
   color: #fff;
@@ -548,11 +532,12 @@ span {
   animation-delay: calc(1s + .5s * var(--s));
   transition: all 3s;
 }
+/* hero h1 */
 
+/* hero h1 keyframes */
 @keyframes hero-span {
   5% {
     opacity: 1;
-
   }
 
   10% {
@@ -566,14 +551,34 @@ span {
     opacity: 1;
   }
 }
-/* welcome section button */
+/* hero h1 keyframes */
+/* hero 'aka' animated span */
+#aka span {
+  position: relative;
+  display: inline-block;
+  animation: aka 5s ease alternate;
+  animation-delay: 4s;
+  margin: .5em 0;
+  color: #fff;
+  opacity: 0.5;
+  transform: scale(0.7);
+}
+@keyframes aka {
+  50% {
+    opacity: 1;
+    transform: scale(1);
+    color: tomato;
+  }
+}
+/* end of hero 'aka' animated span */
+/* welcome section button & shadow */
 #cta-header {
   position: relative;
   display: inline-block;
   text-align: center;
   font-family: 'Gruppo', cursive;
-  padding: 1em;
-  margin: 10px 5px;
+  padding: .5em;
+  margin: 2em 0;
   width: 80%;
   border-radius: 40px;
   border: none;
@@ -623,15 +628,18 @@ span {
 #cta-header:hover#cta-header::after {
   opacity: 1;
 }
+/* welcome section button & shadow */
+/* animated button text */
 #cta-header span {
   position: relative;
   display: inline-block;
   color: #fff;
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 700;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(5s + .2s * var(--i))
 }
+/* animated button text */
 
 /* cta keyframes*/
 @keyframes animate {
@@ -657,6 +665,7 @@ span {
   }
 }
 /* end of cta keyframes*/
+
 /* end of welcome section button */
 
 /* hero content (h1 and button) */
@@ -713,9 +722,9 @@ span {
 
 #skills .skills-top {
   width: 90%;
-  padding: .5em .5em 3em .5em;
+  padding: .5em;
   text-align: center;
-  margin: 5em auto;
+  margin: 1.5em auto;
   background-image: var(--overlay);
   background: #48556388;
   backdrop-filter: blur(2px);
@@ -730,6 +739,7 @@ span {
 
 .skills-top p {
   color: #fff;
+  font-size: 1em;
   background: transparent;
   overflow: hidden;
   text-shadow: var(--text-shadow-sm);
@@ -780,10 +790,10 @@ span {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 1em;
+  padding: .5em;
   background: transparent;
   background-size: cover;
-  margin: 1em auto;
+  margin: .5em auto;
   position: relative;
   z-index: 1;
   text-overflow: ellipsis;
@@ -799,9 +809,10 @@ span {
 
 #skills .skills-item li {
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 1em;
   text-align: left;
-  margin: 1em;
+  margin: .5em;
+  padding: .1em;
   text-transform: capitalize;
 
 }
@@ -865,7 +876,7 @@ span {
 }
 
 #skills .skills-item h2 {
-  font-size: 2.5rem;
+  font-size: 2em;
   color: #fff;
   margin-bottom: 10px;
   text-transform: capitalize;
@@ -875,7 +886,7 @@ span {
 }
 
 #skills .skills-item {
-  line-height: 1.9rem;
+  line-height: 1.3;
 }
 
 
@@ -909,8 +920,8 @@ span {
 /* Dropdown Button */
 .dropbtn {
   color: #eee;
-  padding: .4em 4em;
-  font-size: 2.2em;
+  padding: .3em 1em;
+  font-size: 2em;
   font-weight: 600;
   cursor: pointer;
   border: none;
