--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ span {
 }
 
 .section-title {
-  font-size: 2.7em;
+  font-size: 2.5em;
   font-weight: 500;
   max-width: 100vw;
   color: #000;
@@ -254,6 +254,7 @@ span {
   background: rgb(31, 30, 30);
   width: 100vw;
   height: 100vh;
+  /* border: 2px solid red; */
   left: 100%;
   top: 0;
   display: flex;
@@ -268,8 +269,8 @@ span {
 
 /* nav image */
 #header .links-container .nav-avi {
-  height: 8.5em;
-  width: 8.5em;
+  height: 5em;
+  width: 5em;
   border-radius: 50%;
   overflow: hidden;
   position: absolute;
@@ -279,8 +280,8 @@ span {
 }
 @media only screen and (max-width: 360px){
   #header .links-container .nav-avi {
-    height: 6em;
-    width: 6em;
+    height: 4em;
+    width: 4em;
   }
 }
 #header .links-container .nav-avi img {
@@ -316,7 +317,7 @@ span {
   background-color: #29323c;
 }
 #header .nav-list ul li a {
-  font-size: 1.3em;
+  font-size: 1em;
   font-weight: 500;
   letter-spacing: .15em;
   text-decoration: none;
@@ -722,9 +723,9 @@ span {
 
 #skills .skills-top {
   width: 90%;
-  padding: .5em;
+  padding: .5em .5em 2em .5em;
   text-align: center;
-  margin: 1.5em auto;
+  margin: 2em auto;
   background-image: var(--overlay);
   background: #48556388;
   backdrop-filter: blur(2px);
@@ -739,10 +740,11 @@ span {
 
 .skills-top p {
   color: #fff;
-  font-size: 1em;
+  font-size: .9em;
   background: transparent;
   overflow: hidden;
   text-shadow: var(--text-shadow-sm);
+  line-height: 2em;
 }
 
 #skills .skills-top:hover p {
@@ -806,13 +808,17 @@ span {
 }
 
 
+#skills .skills-item ul {
+  margin: .2em auto;
+  padding: .5em;
+}
 
 #skills .skills-item li {
   color: #fff;
   font-size: 1em;
   text-align: left;
   margin: .5em;
-  padding: .1em;
+  padding: .1em .3em;
   text-transform: capitalize;
 
 }
@@ -876,13 +882,13 @@ span {
 }
 
 #skills .skills-item h2 {
-  font-size: 2em;
+  font-size: 1.4em;
   color: #fff;
   margin-bottom: 10px;
   text-transform: capitalize;
   font-family: 'Gruppo', cursive;
   text-decoration: underline rgba(221, 221, 221, 0.466);
-  text-underline-offset: .2em;
+  text-underline-offset: .1em;
 }
 
 #skills .skills-item {
@@ -920,8 +926,8 @@ span {
 /* Dropdown Button */
 .dropbtn {
   color: #eee;
-  padding: .3em 1em;
-  font-size: 2em;
+  padding: .3em 3em;
+  font-size: 1.5em;
   font-weight: 600;
   cursor: pointer;
   border: none;
@@ -1106,7 +1112,7 @@ span {
   flex-basis: 50%;
   width: 100%;
   height: 100%;
-  line-height: 1.9rem;
+  line-height: 1.2em;
   /* border-radius: 10px; */
 
   display: flex;
@@ -1127,7 +1133,7 @@ span {
 }
 
 #projects .project-tile h1 {
-  font-size: 2.4rem;
+  font-size: 1.4em;
   font-weight: 900;
   line-height: 1em;
   padding-bottom: 10px;
@@ -1141,17 +1147,18 @@ span {
 
 
 #projects .project-tile h2 {
-  font-size: 1.5rem;
+  font-size: 1.1em;
+  line-height: 1.3;
   font-weight: 500;
-  margin-top: 10px;
+  margin: .5em 0;
   text-transform: capitalize;
 }
 
 #projects .project-tile p {
-  font-size: 1.2rem;
+  font-size: .8em;
   font-weight: 200;
   color: #fff;
-  margin-bottom: 10px;
+  margin: .5em 0;
 }
 
 #projects .project-tile a {
@@ -1193,7 +1200,7 @@ span {
 
 #projects .project-tile a i {
   color: #aef50a;
-  font-size: 1.8em;
+  font-size: .8em;
   padding: .2em;
 }
 
@@ -1248,7 +1255,7 @@ span {
 }
 
 .tech-list {
-  padding: 2em;
+  padding: .5em;
 }
 .tech-list ul {
   display: flex;
@@ -1256,6 +1263,7 @@ span {
 
 }
 .tech-list ul li {
+  font-size: .7em;
   color: #adf51d;
   list-style: none;
   padding: .4em;
