--- a/css/style.css
+++ b/css/style.css
@@ -1147,7 +1147,7 @@ span {
 
 
 #projects .project-tile h2 {
-  font-size: 1.1em;
+  font-size: 1em;
   line-height: 1.3;
   font-weight: 500;
   margin: .5em 0;
@@ -1311,7 +1311,7 @@ span {
 }
 
 #about .col-right {
-  width: 90%;
+  width: 93%;
   margin-right: 30px;
   height: auto;
   z-index: 20;
@@ -1343,7 +1343,7 @@ span {
 #about .col-right .about-title {
   display: flex;
   flex-direction: column;
-  padding: 0 2em 3em 2em;
+  padding: 1em 1.3em;
 
 }
 
@@ -1354,9 +1354,9 @@ span {
 #cv-download {
   /* width: 40%; */
   text-align: center;
-  margin: 1em 2em;
-  padding: 1em 1.5em;
-  font-size: .9em;
+  margin: 2em;
+  padding: .5em .7em;
+  font-size: .6em;
   font-weight: 600;
   text-transform: uppercase;
   color: #dc143c;
@@ -1373,7 +1373,7 @@ span {
 
 #about .col-right:hover.col-right #cv-download {
   transition: 1s ease;
-  transform: translateY(4em);
+  transform: translateY(1em);
   opacity: 1;
 }
 
@@ -1385,20 +1385,20 @@ span {
 
 @media screen and (max-width: 320px) {
   #about .col-right:hover.col-right #cv-download {
-    transform: translateY(6.5em);
+    transform: translateY(2.5em);
   }
 }
 
 @media screen and (min-width: 400px) {
   #about .col-right:hover.col-right #cv-download {
-    transform: translateY(4em);
+    transform: translateY(2.5em);
   }
 }
 
 #about .col-right h2 {
   display: inline-block;
   border-radius: 10px;
-  font-size: 1.8rem;
+  font-size: 1em;
   font-weight: 500;
   margin-bottom: 10px;
   padding: .5em;
@@ -1451,13 +1451,14 @@ span {
   text-align: left;
   padding-left: 4px;
   z-index: 13;
+  font-size: .9em;
 }
 
 .custom-scrollbar-js {
   height: 200px;
-  margin-bottom: 1em;
+  margin-bottom: .5em;
   cursor: pointer;
-  padding: 1em;
+  padding: .5em;
 }
 
 #about .col-left {
@@ -1490,7 +1491,7 @@ span {
   position: absolute;
   content: 'Boitumelo Sempe';
   color: #000;
-  font-size: 1.5em;
+  font-size: 1em;
   top: 0;
   left: 0;
   width: 100%;
@@ -1516,7 +1517,7 @@ span {
   content: 'Shakex Sempe';
   padding: .3em;
   text-align: left;
-  font-size: 1.5em;
+  font-size: 1em;
   color:#0000ff;
   top: 0;
   left: 0;
@@ -1553,7 +1554,7 @@ span {
 #cv {
   display: flex;
   justify-content: space-between;
-  font-size: 1.6em;
+  font-size: 1em;
   background-image: linear-gradient(0deg, #dc143c, #000);
   color: #fff;
   margin: 0 auto;
@@ -1653,12 +1654,12 @@ span {
 }
 
 #contact .contact-item {
-  width: 75%;
+  width: 85%;
   /* height: auto; */
   text-align: center;
   border-radius: 10px;
-  padding: 1.5em;
-  margin: 1.5em auto;
+  padding: .5em;
+  margin: .5em auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1724,9 +1725,9 @@ span {
   -webkit-text-fill-color: transparent;
   background-position: left;
   animation: contact-h1 5s ease infinite alternate;
-  padding: .2em 1em;
+  padding: .1em 1em;
   margin: .2em auto;
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: 600;
   position: relative;
 }
@@ -1770,7 +1771,7 @@ span {
 
 #contact .icon {
   margin: 5px auto 10px auto;
-  padding: .5em 1em;
+  padding: .3em .7em;
   border-radius: 10px;
   position: relative;
   display: grid;
@@ -1832,11 +1833,11 @@ span {
 
 
 #contact .contact-info h2 {
-  font-size: 1.3rem;
+  font-size: 1em;
   line-height: 2rem;
   font-weight: 600;
   letter-spacing: .1em;
-  padding: .5em 1.3em;
+  padding: .3em 1em;
   border-radius: 10px;
   margin: .5em auto;
   color: #000a;
@@ -1942,7 +1943,7 @@ span {
 #footer .brand h1 {
   font-family: 'Gruppo', cursive;
   text-shadow: none;
-  letter-spacing: .3em;
+  letter-spacing: .1em;
   position: relative;
   font-size: clamp(1rem, 3vw + 1rem, 4rem);
   width: max-content;
@@ -1982,8 +1983,8 @@ span {
   font-family: 'Ubuntu', sans-serif;
   color: #ddd;
   font-weight: 500;
-  font-size: 1.8rem;
-  letter-spacing: 0.1rem;
+  font-size: 1.2em;
+  letter-spacing: .1em;
   margin-top: 15px;
   margin-bottom: 10px;
   display: flex;
@@ -2033,7 +2034,7 @@ span {
   place-items: center;
   position: relative;
   font-size: 70px;
-  perspective: 20em;
+  perspective: 15em;
   perspective-origin: 50% calc(50% - 6em);
 }
 
@@ -2122,7 +2123,7 @@ span {
   justify-content: space-between;
   width: 90%;
   margin: 5px auto;
-  padding: 1em;
+  padding: .5em;
   border-radius: 5px;
   overflow: hidden;
   position: relative;
@@ -2145,7 +2146,7 @@ span {
 }
 #footer .social-icon::before {
   content: "\f0c0";
-  font-size: 2.4em;
+  font-size: 2em;
   text-align: center;
   color: #ddd;
   opacity: 1;
@@ -2162,7 +2163,7 @@ span {
 
 #footer .social-icon::after {
   content: "\f007";
-  font-size: 2.2em;
+  font-size: 1.8em;
   text-align: center;
   color: rgba(221, 221, 221, 0.307);
   opacity: 0;
@@ -2187,7 +2188,7 @@ span {
 
 
 #footer .social-item i {
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0 10px;
   font-weight: 800;
   padding: 10px;
@@ -2254,7 +2255,7 @@ span {
 #footer p,
 #date {
   color: #f4f4f4;
-  font-size: 1.3rem;
+  font-size: 1em;
   text-transform: capitalize;
 
 }
@@ -2267,7 +2268,7 @@ span {
 
 #bs21 p,
 #bs21 span {
-  font-size: 1.5rem;
+  font-size: 1em;
 }
 
 /*end of bs12*/
@@ -2276,7 +2277,7 @@ span {
 #footer #thanks {
   border: none;
   padding: .5em 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   background-color: #29323c;
   border-radius: 5px;
   text-align: center;
@@ -2286,7 +2287,7 @@ span {
 }
 #thanks h3 {
   color: #ddd;
-  margin: 1em auto;
+  margin: .5em auto;
 }
 #thanks i {
   border: none;
@@ -2319,12 +2320,12 @@ span {
     width: 80%;
   }
   #thanks h3 {
-    font-size: .9em;
+    font-size: .7em;
     padding: .1em;
   }
 }
 #footer .footer-brand h2 {
-  font-size: 1.4em;
+  font-size: 1.2em;
 }
 /* end of thank you page */
 
@@ -2334,11 +2335,11 @@ span {
 .top-link {
   font-size: 2.25rem;
   position: fixed;
-  bottom: 3rem;
-  right: 3rem;
+  bottom: 1em;
+  right: 1em;
   background-image: linear-gradient(0deg, rgb(0, 0, 0), #dc143c);
-  width: 3rem;
-  height: 3rem;
+  width: 1em;
+  height: 1em;
   display: grid;
   place-items: center;
   border-radius: 5px;
@@ -2384,7 +2385,7 @@ span {
 /*Media Query for tablet*/
 @media only screen and (min-width: 768px) {
   h1.section-title {
-    font-size: 6rem
+    font-size: 3em
   }
   
 
@@ -2394,7 +2395,7 @@ span {
   }
 
   .welcome-section h1 {
-    font-size: 8rem;
+    font-size: 3em;
   }
 
   .welcome-section .cta {
