--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ span {
 }
 
 .section-title {
-  font-size: 2.5em;
+  font-size: 2.2em;
   font-weight: 500;
   max-width: 100vw;
   color: #000;
@@ -136,6 +136,7 @@ span {
   text-transform: uppercase;
   letter-spacing: .1em;
   text-align: center;
+  padding: .5em;
 }
 
 /* TEXT-REFLECT CSS */
@@ -1354,36 +1355,32 @@ span {
 #cv-download {
   /* width: 40%; */
   text-align: center;
-  margin: 2em;
-  padding: .5em .7em;
+  margin: 2.5em 0;
+  padding: .5em 1em;
   font-size: .6em;
   font-weight: 600;
   text-transform: uppercase;
   color: #dc143c;
   border-radius: 10px;
-  box-shadow: 4px 4px 5px #000a,
-    inset -3px -3px 5px #000,
-    inset 3px 3px 5px #ddd;
   transition: .5s ease;
   position: absolute;
   opacity: 0;
   z-index: 20;
+  border: 1px solid green;
 
 }
 
 #about .col-right:hover.col-right #cv-download {
   transition: 1s ease;
-  transform: translateY(1em);
+  transform: translateY(100%);
   opacity: 1;
 }
 
 #about .col-right .about-title:hover a {
   letter-spacing: .1em;
-  box-shadow: inset -3px -3px 5px #ddda,
-    inset 3px 3px 5px #000a;
 }
 
-@media screen and (max-width: 320px) {
+/* @media screen and (max-width: 320px) {
   #about .col-right:hover.col-right #cv-download {
     transform: translateY(2.5em);
   }
@@ -1393,14 +1390,14 @@ span {
   #about .col-right:hover.col-right #cv-download {
     transform: translateY(2.5em);
   }
-}
+} */
 
 #about .col-right h2 {
   display: inline-block;
   border-radius: 10px;
   font-size: 1em;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 1em;
   padding: .5em;
 
   transition: .5s ease;
@@ -1584,7 +1581,7 @@ span {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 2em;
+  font-size: 1.5em;
   padding-right: .1em;
   text-shadow: none;
   animation: icon-shine 3s linear infinite;
@@ -2146,7 +2143,7 @@ span {
 }
 #footer .social-icon::before {
   content: "\f0c0";
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
   color: #ddd;
   opacity: 1;
@@ -2163,7 +2160,7 @@ span {
 
 #footer .social-icon::after {
   content: "\f007";
-  font-size: 1.8em;
+  font-size: 1.5em;
   text-align: center;
   color: rgba(221, 221, 221, 0.307);
   opacity: 0;
@@ -2188,7 +2185,7 @@ span {
 
 
 #footer .social-item i {
-  font-size: 1.5em;
+  font-size: 1.6em;
   margin: 0 10px;
   font-weight: 800;
   padding: 10px;
@@ -2228,27 +2225,30 @@ span {
 #footer .social-item a::before {
   content: attr(data-icon);
   position: absolute;
-  bottom: -3.3em;
+  bottom: -120%;
   left: 0;
-  font-size: .9em;
+  font-size: .7em;
   color: #ddd;
   width: 100%;
   height: 100%;
   opacity: 0;
   transition: 1s;
-  transform: translateY(4em);
+  transform: translateY(100%);
 }
 /* freecodecamp icon::before needs additional styling to fit in .social-icon div */
 #footer .social-item:nth-child(3) a::before {
-  font-size: .8em;
-  bottom: -3.8em;
-  left: -2em;
+  font-size: .6em;
+  bottom: -100%;
+  left: -1em;
+  transform: translateY(100%);
+
 }
 
 
 #footer .social-icon:hover.social-icon a:before {
   opacity: 1;
   transform: translateY(0);
+
 }
 /* end of social icon labels */
 
